Fix overflow tile grid y axis

--- a/style.css
+++ b/style.css
@@ -17,12 +17,16 @@ body {
   margin: 0;
   font-family: var(--text-font);
   height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
   background-color: var(--color-5);
   margin: none;
   padding: 1rem;
+  flex 0 0;
 }
 
 h1 {
@@ -44,6 +48,8 @@ h2 {
 
 main {
   display: flex;
+  flex: auto;
+  overflow: hidden;
 }
 
 form {
@@ -89,8 +95,9 @@ legend {
 }
 
 .tile-generator__grid {
-  margin: auto;
+  margin: 2rem;
   background-color: var(--color-3);
+  overflow: auto;
 }
 
 label {
@@ -158,8 +165,6 @@ input[type="submit"] {
 .tile {
   position: relative;
   display: inline-block;
-  height: 2rem;
-  width: 2rem;
   margin: 0.1rem;
 }
 
@@ -191,6 +196,7 @@ footer {
   background-color: var(--color-5);
   padding: 0.5rem;
   color: var(--color-4);
+  flex: 0 0;
 }
 
 footer a {
